--- a/petadoption/petstyle.css
+++ b/petadoption/petstyle.css
@@ -91,7 +91,7 @@ h2 {
 /* Gaya untuk output __toString() atau Iteration */
 pre {
   background-color: #3d3d3d;
-  color: #00ff00;
+  color: #c387cf;
   padding: 10px;
   border-radius: 3px;
   overflow-x: auto;
